ОНО РАБОТАЕТ !!! ОНО РАБОТАЕEEEEEEТ !!! AAAAA! Robolectric 4.10.3 и Java 17 !!!